$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-02-02 [B] Fixed contact form referer (thread ID 63565) {eenemeenemuu}
2010-02-02 [C] Added category parameter to album list link (thread ID 63530) {eenemeenemuu}
2010-02-01 [C] Fixing contact form redirect (thread ID 63544) {GauGau}
2010-02-01 [C] Added comment blocks to JS head to increase compatibility and robustness (thread ID 63555) {GauGau}
2010-01-31 [B] Fixed error message on contact page when no subject was given and the config option was set to optional (thread ID 63541) {GauGau}
2010-01-31 [C] Fixed cosmetical issue with missing suject lines (thread ID 63540) {GauGau}
2010-01-31 [B] Corrected plugin version check not taking into account exact matches {GauGau}
2010-01-31 [A] Added Russian language file (user contribution) {eenemeenemuu}
2010-01-29 [D] Added details about subversion repository structure {GauGau}
2010-01-29 [A] Added plugin hook 'thumb_strip_html_title' (redundant code in functions.inc.php) {timoswelt}
2010-01-26 [C] Corrected minor language file issues discussed in threads 63435 and 63437 {GauGau}
2010-01-26 [B] Removed unneeded spaces in translation strings (thread ID 63434) {GauGau}
2010-01-26 [B] Changed string 'Flash Pix' to 'FlashPix' (thread ID 63425) {GauGau}
2010-01-26 [B] Fixing translation mistake for util.php (thread ID 63417) {GauGau}
2010-01-25 [B] Fixed slide show for non-images (thread ID 63316) {Aditya}
2010-01-24 [A] Added check to plugin manager for version requirements (thread ID 63279) {GauGau}
2010-01-22 [A] Added plugin hook 'thumb_html_title' (thread ID 63321) {timoswelt}